--- a/mybudget/TableSectionHeader.xib
+++ b/mybudget/TableSectionHeader.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="TableSectionHeader" customModule="budget" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="TableSectionHeader" customModule="mybudget" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="532" height="191"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -24,46 +24,43 @@
                             <color key="backgroundColor" red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="calibratedRGB"/>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hnG-kc-0Ji">
-                            <rect key="frame" x="38" y="87" width="187" height="18"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="187" id="oWr-44-Ob6"/>
-                            </constraints>
+                            <rect key="frame" x="8" y="87" width="239" height="18"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g81-Hd-FSy">
-                            <rect key="frame" x="233" y="87" width="291" height="18"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            <color key="highlightedColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                        </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrowDown" translatesAutoresizingMaskIntoConstraints="NO" id="Nqa-Po-mjy">
-                            <rect key="frame" x="8" y="8" width="22" height="175"/>
+                            <rect key="frame" x="502" y="9" width="22" height="174"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="22" id="6Y9-oU-yDR"/>
                             </constraints>
                         </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g81-Hd-FSy">
+                            <rect key="frame" x="255" y="87" width="239" height="18"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="highlightedColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        </label>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="Nqa-Po-mjy" firstAttribute="top" secondItem="32W-dJ-r1w" secondAttribute="bottom" constant="7" id="2JZ-iV-SMJ"/>
-                        <constraint firstItem="Pen-eU-NPe" firstAttribute="top" secondItem="Nqa-Po-mjy" secondAttribute="bottom" constant="8" symbolic="YES" id="364-4n-zOJ"/>
-                        <constraint firstItem="g81-Hd-FSy" firstAttribute="trailing" secondItem="HKi-Xm-e6w" secondAttribute="trailingMargin" id="5wT-CX-kqv"/>
+                        <constraint firstItem="Nqa-Po-mjy" firstAttribute="leading" secondItem="g81-Hd-FSy" secondAttribute="trailing" constant="8" id="0vN-Z8-ocM"/>
+                        <constraint firstItem="Nqa-Po-mjy" firstAttribute="top" secondItem="32W-dJ-r1w" secondAttribute="bottom" constant="8" id="2JZ-iV-SMJ"/>
+                        <constraint firstItem="Pen-eU-NPe" firstAttribute="top" secondItem="Nqa-Po-mjy" secondAttribute="bottom" constant="8" id="364-4n-zOJ"/>
+                        <constraint firstItem="g81-Hd-FSy" firstAttribute="width" secondItem="hnG-kc-0Ji" secondAttribute="width" id="59J-eN-WWr"/>
+                        <constraint firstItem="g81-Hd-FSy" firstAttribute="trailing" secondItem="HKi-Xm-e6w" secondAttribute="trailingMargin" constant="-30" id="5wT-CX-kqv"/>
                         <constraint firstItem="g81-Hd-FSy" firstAttribute="baseline" secondItem="hnG-kc-0Ji" secondAttribute="baseline" id="FuG-jW-MLx"/>
-                        <constraint firstItem="Nqa-Po-mjy" firstAttribute="leading" secondItem="HKi-Xm-e6w" secondAttribute="leading" constant="8" id="J2c-MR-bay"/>
                         <constraint firstItem="32W-dJ-r1w" firstAttribute="top" secondItem="HKi-Xm-e6w" secondAttribute="top" id="MBO-3s-bMo"/>
                         <constraint firstItem="Nqa-Po-mjy" firstAttribute="bottom" secondItem="HKi-Xm-e6w" secondAttribute="bottomMargin" id="OHn-5M-Ukj"/>
-                        <constraint firstItem="Nqa-Po-mjy" firstAttribute="top" secondItem="HKi-Xm-e6w" secondAttribute="topMargin" id="OMw-Aq-aPd"/>
+                        <constraint firstItem="Nqa-Po-mjy" firstAttribute="top" secondItem="HKi-Xm-e6w" secondAttribute="topMargin" constant="1" id="OMw-Aq-aPd"/>
                         <constraint firstItem="g81-Hd-FSy" firstAttribute="leading" secondItem="hnG-kc-0Ji" secondAttribute="trailing" constant="8" symbolic="YES" id="QI3-gk-3Id"/>
                         <constraint firstItem="32W-dJ-r1w" firstAttribute="leading" secondItem="HKi-Xm-e6w" secondAttribute="leading" id="QXC-97-oez"/>
                         <constraint firstItem="32W-dJ-r1w" firstAttribute="trailing" secondItem="Pen-eU-NPe" secondAttribute="trailing" id="QsJ-zO-who"/>
-                        <constraint firstItem="hnG-kc-0Ji" firstAttribute="leading" secondItem="Nqa-Po-mjy" secondAttribute="trailing" constant="8" symbolic="YES" id="RhX-un-eQh"/>
                         <constraint firstItem="32W-dJ-r1w" firstAttribute="leading" secondItem="Pen-eU-NPe" secondAttribute="leading" id="ZWt-dR-lom"/>
-                        <constraint firstItem="Nqa-Po-mjy" firstAttribute="leading" secondItem="HKi-Xm-e6w" secondAttribute="leadingMargin" id="aFk-KL-eEh"/>
                         <constraint firstAttribute="trailing" secondItem="32W-dJ-r1w" secondAttribute="trailing" id="aXf-M6-E9o"/>
                         <constraint firstItem="hnG-kc-0Ji" firstAttribute="centerY" secondItem="Nqa-Po-mjy" secondAttribute="centerY" id="hlL-4M-rN7"/>
                         <constraint firstAttribute="bottom" secondItem="Pen-eU-NPe" secondAttribute="bottom" constant="-1" id="q6d-K8-wJH"/>
+                        <constraint firstItem="hnG-kc-0Ji" firstAttribute="leading" secondItem="HKi-Xm-e6w" secondAttribute="leading" constant="8" id="zrs-nq-42t"/>
                     </constraints>
                 </view>
             </subviews>
@@ -84,6 +81,6 @@
         </view>
     </objects>
     <resources>
-        <image name="arrowDown" width="600" height="600"/>
+        <image name="arrowDown" width="96" height="96"/>
     </resources>
 </document>
