--- a/mybudget/TableSectionHeader.xib
+++ b/mybudget/TableSectionHeader.xib
@@ -31,6 +31,7 @@
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrowDown" translatesAutoresizingMaskIntoConstraints="NO" id="Nqa-Po-mjy">
                             <rect key="frame" x="502" y="9" width="22" height="174"/>
+                            <color key="tintColor" red="0.99607843137254903" green="0.50588235294117645" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="22" id="6Y9-oU-yDR"/>
                             </constraints>
