--- a/mybudget/Base.lproj/Main.storyboard
+++ b/mybudget/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
     </dependencies>
     <scenes>
-        <!--MyBudget-->
+        <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="mybudget" customModuleProvider="target" sceneMemberID="viewController">
@@ -25,36 +25,36 @@
                                 <rect key="frame" x="20" y="20" width="280" height="540"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0gT-M0-sGa">
-                                    <size key="itemSize" width="219" height="66"/>
+                                    <size key="itemSize" width="148" height="141"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="GUF-hk-Ekg" customClass="MainCollectionViewCell" customModule="mybudget" customModuleProvider="target">
-                                        <rect key="frame" x="31" y="64" width="219" height="66"/>
+                                        <rect key="frame" x="66" y="64" width="148" height="141"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="219" height="66"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="148" height="141"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KVg-cX-yJx">
-                                                    <rect key="frame" x="8" y="8" width="35" height="50"/>
+                                                    <rect key="frame" x="8" y="8" width="35" height="35"/>
                                                     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="50" id="BdX-5u-TEz"/>
-                                                        <constraint firstAttribute="width" secondItem="KVg-cX-yJx" secondAttribute="height" multiplier="1:1" constant="-15" id="bIm-xc-bTn"/>
+                                                        <constraint firstAttribute="width" secondItem="KVg-cX-yJx" secondAttribute="height" multiplier="1:1" id="L19-zg-W28"/>
+                                                        <constraint firstAttribute="width" constant="35" id="m8j-AI-62L"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RS19,000" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="uOT-UC-9yF">
-                                                    <rect key="frame" x="51" y="39" width="160" height="21"/>
+                                                    <rect key="frame" x="8" y="112" width="132" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Expenses" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7DA-9l-CPi">
-                                                    <rect key="frame" x="51" y="8" width="160" height="23"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Expenses" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7DA-9l-CPi">
+                                                    <rect key="frame" x="8" y="51" width="132" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -63,14 +63,14 @@
                                         </view>
                                         <color key="backgroundColor" red="0.17254901959999999" green="0.59215686270000001" blue="0.83137254900000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstItem="uOT-UC-9yF" firstAttribute="leading" secondItem="KVg-cX-yJx" secondAttribute="trailing" constant="8" id="5xt-8R-yQE"/>
-                                            <constraint firstItem="7DA-9l-CPi" firstAttribute="leading" secondItem="KVg-cX-yJx" secondAttribute="trailing" constant="8" id="GhZ-xJ-PjG"/>
-                                            <constraint firstAttribute="leadingMargin" secondItem="KVg-cX-yJx" secondAttribute="leading" id="SlZ-BJ-gh1"/>
-                                            <constraint firstAttribute="trailingMargin" secondItem="7DA-9l-CPi" secondAttribute="trailing" id="Yuh-JY-2MX"/>
-                                            <constraint firstItem="KVg-cX-yJx" firstAttribute="centerY" secondItem="GUF-hk-Ekg" secondAttribute="centerY" id="ha7-9X-mV5"/>
-                                            <constraint firstItem="7DA-9l-CPi" firstAttribute="top" secondItem="KVg-cX-yJx" secondAttribute="top" id="oya-8u-TzK"/>
-                                            <constraint firstAttribute="trailingMargin" secondItem="uOT-UC-9yF" secondAttribute="trailing" id="r6F-qe-yVZ"/>
-                                            <constraint firstItem="uOT-UC-9yF" firstAttribute="top" secondItem="7DA-9l-CPi" secondAttribute="bottom" constant="8" id="x9o-XR-T0F"/>
+                                            <constraint firstAttribute="leadingMargin" secondItem="KVg-cX-yJx" secondAttribute="leading" id="9bd-m8-Cy6"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="uOT-UC-9yF" secondAttribute="trailing" id="Eok-3p-vGn"/>
+                                            <constraint firstItem="7DA-9l-CPi" firstAttribute="top" secondItem="KVg-cX-yJx" secondAttribute="bottom" constant="8" id="VAO-o9-Z5u"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="7DA-9l-CPi" secondAttribute="trailing" id="Xg9-dk-T0H"/>
+                                            <constraint firstAttribute="leadingMargin" secondItem="uOT-UC-9yF" secondAttribute="leading" id="cBi-cu-6c4"/>
+                                            <constraint firstAttribute="leadingMargin" secondItem="7DA-9l-CPi" secondAttribute="leading" id="cgJ-xd-KjM"/>
+                                            <constraint firstAttribute="topMargin" secondItem="KVg-cX-yJx" secondAttribute="top" id="ijn-Ni-tlc"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="uOT-UC-9yF" secondAttribute="bottom" id="vhr-q8-syR"/>
                                         </constraints>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -98,12 +98,44 @@
                             <constraint firstItem="lys-CJ-abm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vJ8-6y-Rux"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="MyBudget" id="9Fk-oo-Rq2">
+                    <navigationItem key="navigationItem" id="9Fk-oo-Rq2">
+                        <nil key="title"/>
                         <barButtonItem key="backBarButtonItem" title="Back" id="TwA-DC-eWg"/>
+                        <view key="titleView" contentMode="scaleToFill" id="Z6Z-Kk-D7T">
+                            <rect key="frame" x="69" y="2" width="182" height="40"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="osh-l5-8f0">
+                                    <rect key="frame" x="8" y="0.0" width="166" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OwO-iU-Hdg">
+                                    <rect key="frame" x="8" y="29" width="166" height="11"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="11" id="Wm4-o1-mp7"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="OwO-iU-Hdg" firstAttribute="top" secondItem="osh-l5-8f0" secondAttribute="bottom" constant="8" symbolic="YES" id="Bdo-fc-J2q"/>
+                                <constraint firstItem="osh-l5-8f0" firstAttribute="leading" secondItem="OwO-iU-Hdg" secondAttribute="leading" id="CZ6-pI-U6y"/>
+                                <constraint firstItem="osh-l5-8f0" firstAttribute="leading" secondItem="Z6Z-Kk-D7T" secondAttribute="leadingMargin" id="Dsm-PN-V67"/>
+                                <constraint firstItem="osh-l5-8f0" firstAttribute="trailing" secondItem="Z6Z-Kk-D7T" secondAttribute="trailingMargin" id="VdQ-XN-xVB"/>
+                                <constraint firstItem="osh-l5-8f0" firstAttribute="trailing" secondItem="OwO-iU-Hdg" secondAttribute="trailing" id="YkB-zW-uGg"/>
+                                <constraint firstItem="osh-l5-8f0" firstAttribute="top" secondItem="Z6Z-Kk-D7T" secondAttribute="top" id="l6E-af-kMy"/>
+                            </constraints>
+                        </view>
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="collectionView" destination="lys-CJ-abm" id="inS-E6-0m2"/>
+                        <outlet property="currentMonth" destination="OwO-iU-Hdg" id="xlg-ga-vD4"/>
+                        <outlet property="navTitle" destination="osh-l5-8f0" id="Ei3-mc-SKJ"/>
                         <segue destination="FOZ-Vs-VV6" kind="show" identifier="listView" id="NQl-0D-4oa"/>
                         <segue destination="qpj-1g-0ZE" kind="show" identifier="incomeList" id="x0o-Zv-uNe"/>
                         <segue destination="F2O-Rf-L1q" kind="show" identifier="budgetView" id="Vax-Si-0IU"/>
@@ -116,7 +148,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1494" y="329"/>
+            <point key="canvasLocation" x="1496" y="329"/>
         </scene>
         <!--Search-->
         <scene sceneID="Ci0-Wn-Sya">
@@ -315,15 +347,6 @@
                                         <action selector="nextMonth:" destination="FOZ-Vs-VV6" eventType="touchUpInside" id="Ezs-y4-nUc"/>
                                     </connections>
                                 </button>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TkZ-Al-MEE">
-                                    <rect key="frame" x="48" y="27" width="86" height="13"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="13" id="ENS-AK-xk5"/>
-                                    </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X27-f1-eYT">
                                     <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                     <constraints>
@@ -334,6 +357,15 @@
                                         <action selector="prevMonth:" destination="FOZ-Vs-VV6" eventType="touchUpInside" id="3UW-uX-oTB"/>
                                     </connections>
                                 </button>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TkZ-Al-MEE">
+                                    <rect key="frame" x="48" y="27" width="86" height="13"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="13" id="ENS-AK-xk5"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
@@ -3440,16 +3472,16 @@
         <image name="prevMonth" width="144" height="144"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="jge-zi-JaC"/>
+        <segue reference="rxT-Kq-Ui6"/>
         <segue reference="IVx-tJ-cid"/>
-        <segue reference="Vax-Si-0IU"/>
-        <segue reference="fEM-OY-Hyi"/>
         <segue reference="xeI-fx-maV"/>
         <segue reference="juH-CN-12F"/>
+        <segue reference="Vax-Si-0IU"/>
+        <segue reference="jge-zi-JaC"/>
+        <segue reference="fEM-OY-Hyi"/>
+        <segue reference="7rb-HU-n6Q"/>
+        <segue reference="oy1-0M-y6T"/>
         <segue reference="uKc-4G-tJG"/>
         <segue reference="hsH-l5-Qe9"/>
-        <segue reference="Z4r-al-0ds"/>
-        <segue reference="rxT-Kq-Ui6"/>
-        <segue reference="7rb-HU-n6Q"/>
     </inferredMetricsTieBreakers>
 </document>
