--- a/mybudget/Base.lproj/Main.storyboard
+++ b/mybudget/Base.lproj/Main.storyboard
@@ -58,15 +58,24 @@
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PuJ-tV-a3v">
+                                                    <rect key="frame" x="8" y="76" width="132" height="0.0"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <color key="backgroundColor" red="0.17254901959999999" green="0.59215686270000001" blue="0.83137254900000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
+                                            <constraint firstAttribute="trailingMargin" secondItem="PuJ-tV-a3v" secondAttribute="trailing" id="1zC-gy-FIF"/>
                                             <constraint firstAttribute="leadingMargin" secondItem="KVg-cX-yJx" secondAttribute="leading" id="9bd-m8-Cy6"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="uOT-UC-9yF" secondAttribute="trailing" id="Eok-3p-vGn"/>
+                                            <constraint firstAttribute="leadingMargin" secondItem="PuJ-tV-a3v" secondAttribute="leading" id="I02-RN-Rtj"/>
                                             <constraint firstItem="7DA-9l-CPi" firstAttribute="top" secondItem="KVg-cX-yJx" secondAttribute="bottom" constant="8" id="VAO-o9-Z5u"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="7DA-9l-CPi" secondAttribute="trailing" id="Xg9-dk-T0H"/>
+                                            <constraint firstItem="PuJ-tV-a3v" firstAttribute="top" secondItem="7DA-9l-CPi" secondAttribute="bottom" constant="1" id="bug-tP-eWe"/>
                                             <constraint firstAttribute="leadingMargin" secondItem="uOT-UC-9yF" secondAttribute="leading" id="cBi-cu-6c4"/>
                                             <constraint firstAttribute="leadingMargin" secondItem="7DA-9l-CPi" secondAttribute="leading" id="cgJ-xd-KjM"/>
                                             <constraint firstAttribute="topMargin" secondItem="KVg-cX-yJx" secondAttribute="top" id="ijn-Ni-tlc"/>
@@ -80,6 +89,7 @@
                                         <connections>
                                             <outlet property="img" destination="KVg-cX-yJx" id="TVK-kd-puC"/>
                                             <outlet property="name" destination="7DA-9l-CPi" id="9Uf-LO-myM"/>
+                                            <outlet property="name2" destination="PuJ-tV-a3v" id="VYs-4k-cMP"/>
                                             <outlet property="price" destination="uOT-UC-9yF" id="spr-km-dyE"/>
                                         </connections>
                                     </collectionViewCell>
